# diff-match-patch

./: .gitignore  AUTHORS  CODEOWNERS  DiffMatchPatch.podspec  README.md  README.txt
.github/workflows/: semgrep.yml
cpp/: .gitignore  Makefile  diff_match_patch.cpp  diff_match_patch.h  diff_match_patch.pro  diff_match_patch_test.cpp  diff_match_patch_test.h  diff_match_patch_util.cpp  diff_match_patch_util.h
cpp17/: CMakeLists.txt  diff_match_patch.cpp  diff_match_patch.h  diff_match_patch_test.cpp  diff_match_patch_test.h  diff_match_patch_test_assertEquals.cpp  diff_match_patch_utils.cpp  diff_match_patch_utils.h  include.cmake
csharp/: .gitignore  DiffMatchPatch.cs  DiffMatchPatch.csproj  DiffMatchPatch.sln  DiffMatchPatchTest.cs  README.md
csharp/DiffMatchPatch/: DiffMatchPatch.cs  DiffMatchPatch.csproj
csharp/DiffMatchPatch.Tests/: DiffMatchPatch.Tests.csproj  DiffMatchPatchTest.cs  DiffTests.cs  MatchTests.cs  PatchTests.cs  Speedtest.cs
csharp/DiffMatchPatch.Tests.Performance/: DiffMainTest.cs  DiffMatchPatch.Tests.Performance.csproj  Program.cs  Speedtest.cs
csharp/tests/: DiffMatchPatchTest.cs  DiffMatchPatchTests.csproj  Speedtest.cs
dart/: DMPClass.dart  DiffClass.dart  DiffMatchPatch.dart  DiffMatchPatchTest.dart  PatchClass.dart  README.txt
dart/tests/: DiffMatchPatchTest.dart  Speedtest.dart  Speedtest.dart.js  Speedtest.html  SpeedtestVM.dart
demos/: demo_diff.html  demo_match.html  demo_patch.html  diff.html  match.html  patch.html
java/: pom.xml
java/name/fraser/neil/plaintext/: diff_match_patch_test.java
java/src/name/fraser/neil/plaintext/: diff_match_patch.java
java/tests/name/fraser/neil/plaintext/: Speedtest.java  diff_match_patch_impltest.java  diff_match_patch_test.java
javascript/: diff_match_patch.css  diff_match_patch.js  diff_match_patch_test.html  diff_match_patch_uncompressed.js
javascript/tests/: diff_match_patch_test.html  diff_match_patch_test.js  speedtest.html
kotlin/src/name/fraser/neil/plaintext/: diff_match_patch.kt
kotlin/tests/name/fraser/neil/plaintext/: Speedtest.kt  diff_match_patch_test.kt
lua/: diff_match_patch.lua  diff_match_patch_test.lua
lua/tests/: diff_match_patch_test.lua  speedtest.lua
maven/diff_match_patch/diff_match_patch/: maven-metadata.xml
maven/diff_match_patch/diff_match_patch/current/: diff_match_patch-current.pom
objectivec/: DiffMatchPatch.h  DiffMatchPatch.m  DiffMatchPatchCFUtilities.c  DiffMatchPatchCFUtilities.h  DiffMatchPatch_Prefix.pch  Info.plist  NSString+JavaSubstring.m  NSString+UnicharUtilities.m  NSString+UriCompatibility.m  speedtest_Prefix.pch
objectivec/Configurations/: Base+SnowLeopard.xcconfig  Base.xcconfig  Version.xcconfig
objectivec/DiffMatchPatch.xcodeproj/: project.pbxproj
objectivec/Tests/: DiffMatchPatchTest.h  DiffMatchPatchTest.m  speedtest.m
python2/: diff_match_patch.py  diff_match_patch_test.py  setup.py
python2/tests/: diff_match_patch_test.py  speedtest.py
python3/: __init__.py  diff_match_patch.py  diff_match_patch_test.py
python3/tests/: diff_match_patch_test.py  speedtest.py
typescript/: diff_match_patch.d.ts  diff_match_patch.js  diff_match_patch.ts  diff_match_patch_uncompressed.ts  tsconfig.json
typescript/built/: diff_match_patch.js
typescript/built/tests/: diff_match_patch_test.html  diff_match_patch_test.js
typescript/src/: diff_match_patch.ts
typescript/src/tests/: diff_match_patch_test.ts
typescript/tests/: diff_match_patch_test.ts  speedtest.ts  testrunner.ts  tsconfig.json
(+6 files in other folders)
